# 42_Projects

FdF/: Makefile
FdF/includes/: fdf.h
FdF/libft/: ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_lstadd.c  ft_lstiter.c  ft_lstnew.c  ft_memccpy.c  ft_putnbr.c  ft_strchr.c  ft_strdel.c  ft_strnstr.c  ft_strrchr.c  ft_strstr.c  libft.h
FdF/src/: control.c  draw.c  fdf.c  init.c  keyboard.c  read_file.c  utils.c
Fract'ol/: Makefile
Fract'ol/includes/: fractol.h
Fract'ol/libft/: Makefile  ft_atoi.c  ft_lstdel.c  ft_max.c  ft_memalloc.c  ft_memchr.c  ft_memdel.c  ft_min.c  ft_putchar_fd.c  ft_sqrt.c  ft_strcmp.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncpy.c  ft_strnew.c  ft_strsplit.c  ft_strtrim.c  get_next_line.c  get_next_line.h
Fract'ol/src/: burning_s.c  control.c  fractol.c  init.c  julia.c  key_hook.c  mandelbrot.c  mouse.c  newton.c
Libft/: ft_isdigit.c  ft_isprint.c  ft_lstmap.c  ft_memcpy.c  ft_memmove.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_space.c  ft_strcat.c  ft_strclr.c  ft_strncmp.c  ft_strnequ.c  ft_strsplit.c  ft_tolower.c  libft.h
RT/: CMakeLists.txt  Makefile  author  kernel.cl
RT/cl/: CMakeLists.txt  cl.h  cl_buffer.c  cl_init.c  cl_kernel.c  cl_kernel.h  cl_private.h
RT/cmake/: FindSDL2_image.cmake
RT/gui/: CMakeLists.txt  gl_program_init.c  gui.cpp  gui.h
RT/includes/: rt.h
RT/lib/: CMakeLists.txt
RT/lib/cJSON/: CMakeLists.txt
RT/lib/imgui/: CMakeLists.txt  imgui_impl_sdl_gl3.cpp
RT/lib/libft/: CMakeLists.txt  Makefile
RT/lib/libft/include/: libft.h
RT/lib/libft/src/: ft_atod.c  ft_count_symbols.c  ft_isdigit.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_remove_characters.c  ft_strsplit.c  ft_vec_add.c  ft_vec_cross_prod.c  ft_vector_init.c  get_next_line.c  is_directory.c
RT/parser/: CMakeLists.txt  parse_camera.c  parse_light.c  parse_obj.c  parse_objects_p2.c  parse_routine.c  parse_trivial_objects.c  parse_vec3.c  parser.c  parser.h  parser_private.h
RT/quaternion/: CMakeLists.txt  Makefile  add_q.c  chb_q.c  cmp_q.c  cos_q.c  crs_q.c  dot_q.c  dst_q.c  lnr_q.c  mag_q.c  nrm_q.c  opp_q.c  quaternion.h  rot_q.c  scl_q.c  sqr_q.c  sub_q.c
RT/scenes/: icosahedron.json  refraction_cyl.json  refraction_sph.json  scene.json  textures.json
RT/scenes/lights/: direct.json  paralel.json  spot.json
RT/scenes/primitives/: cone.json  cylinder.json  disk.json  ellipsoid.json  mobius.json  parabola.json  plane.json  sphere.json  torus.json  triangle.json
RT/sources/: CMakeLists.txt  cl_set_arg.c  cmake_install.cmake  event_acts.c  file_reading.c  init.c  lights.c  loop.c  main.c  objects.c  recognize_scancode.c  second_camera.c  textures.c
fillit/: Makefile  author
fillit/includes/: fillit.h
fillit/src/: algoritm.c  arr.c  check_file.c  main.c  place.c  validate.c
get_next_line/: author  get_next_line.h
get_next_line/libft/: Makefile  ft_isascii.c  ft_itoa.c  ft_lstdelone.c  ft_memcmp.c  ft_memset.c  ft_putchar.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_strcpy.c  ft_strdup.c  (+9 more)
